<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ MinecraftDecompiler. A tool/library to deobfuscate and decompile Minecraft.
  ~ Copyright (C) 2019-2021  MaxPixelStudios
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>cn.maxpixel</groupId>
    <artifactId>minecraft-decompiler</artifactId>
    <version>2.3-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <encoding>UTF-8</encoding>
        <depend.asm.ver>9.1</depend.asm.ver>
        <depend.gson.ver>2.8.6</depend.gson.ver>
        <depend.log4j.ver>2.14.1</depend.log4j.ver>
        <depend.fastutil.ver>8.5.4</depend.fastutil.ver>
        <depend.jopt.ver>6.0-alpha-3</depend.jopt.ver>
        <depend.cfr.ver>0.151</depend.cfr.ver>
        <depend.fernflower.ver>403</depend.fernflower.ver>
        <depend.classloaderutils.ver>1.0.0</depend.classloaderutils.ver>
        <depend.jmh.ver>1.31</depend.jmh.ver>
    </properties>
    <pluginRepositories>
        <pluginRepository>
            <id>plugins-snapshot</id>
            <url>https://repository.apache.org/content/repositories/snapshots/</url>
            <releases><enabled>false</enabled></releases>
            <snapshots><enabled>true</enabled></snapshots>
        </pluginRepository>
    </pluginRepositories>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>${project.basedir}</directory>
                            <followSymlinks>false</followSymlinks>
                            <useDefaultExcludes>true</useDefaultExcludes>
                            <includes>
                                <include>MinecraftDecompiler.jar</include>
                            </includes>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.3.0-SNAPSHOT</version>
                <configuration>
                    <transformers>
                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                            <mainClass>cn.maxpixel.mcdecompiler.DeobfuscatorCommandLine</mainClass>
                            <manifestEntries>
                                <Implementation-Version>${project.version}</Implementation-Version>
                                <Multi-Release>true</Multi-Release><!-- Log4j 2 -->
                            </manifestEntries>
                        </transformer>
                    </transformers>
                    <outputFile>MinecraftDecompiler.jar</outputFile>
                    <minimizeJar>true</minimizeJar>
                    <filters>
                        <filter>
                            <artifact>it.unimi.dsi:fastutil-core</artifact>
                            <excludes>
                                <exclude>it/unimi/dsi/fastutil/booleans/**</exclude>
                                <exclude>it/unimi/dsi/fastutil/chars/**</exclude>
                                <exclude>it/unimi/dsi/fastutil/bytes/**</exclude>
                                <exclude>it/unimi/dsi/fastutil/doubles/**</exclude>
                                <exclude>it/unimi/dsi/fastutil/floats/**</exclude>
                                <exclude>it/unimi/dsi/fastutil/io/**</exclude>
                                <exclude>it/unimi/dsi/fastutil/longs/**</exclude>
                                <exclude>it/unimi/dsi/fastutil/shorts/**</exclude>
                            </excludes>
                        </filter>
                        <filter>
                            <artifact>org.apache.logging.log4j:log4j-core</artifact>
                            <includes><include>**</include></includes>
                        </filter>
                        <filter>
                            <artifact>org.apache.logging.log4j:log4j-api</artifact>
                            <includes><include>**</include></includes>
                        </filter>
                        <filter>
                            <artifact>org.benf:cfr</artifact>
                            <includes><include>**</include></includes>
                        </filter>
                        <filter>
                            <artifact>net.minecraftforge:fernflower</artifact>
                            <includes><include>**</include></includes>
                        </filter>
                    </filters>
                </configuration>
                <executions>
                    <execution>
                        <id>shade</id>
                        <phase>package</phase>
                        <goals><goal>shade</goal></goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>generate-source</id>
                        <phase>package</phase>
                        <goals><goal>jar</goal></goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>generate-javadoc</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                            <goal>javadoc</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <locale>en_US</locale>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>3.0.0-M1</version>
            </plugin>
        </plugins>
    </build>
    <repositories>
        <repository>
            <id>lx-gaming</id>
            <url>https://dl.bintray.com/lxgaming/maven</url>
        </repository>
        <repository>
            <id>minecraft-forge</id>
            <url>https://files.minecraftforge.net/maven/</url>
        </repository>
    </repositories>
    <dependencies>
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm</artifactId>
            <version>${depend.asm.ver}</version>
        </dependency>
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm-commons</artifactId>
            <version>${depend.asm.ver}</version>
        </dependency>
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm-tree</artifactId>
            <version>${depend.asm.ver}</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${depend.gson.ver}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${depend.log4j.ver}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${depend.log4j.ver}</version>
        </dependency>
        <dependency>
            <groupId>it.unimi.dsi</groupId>
            <artifactId>fastutil-core</artifactId>
            <version>${depend.fastutil.ver}</version>
        </dependency>
        <dependency>
            <groupId>net.sf.jopt-simple</groupId>
            <artifactId>jopt-simple</artifactId>
            <version>${depend.jopt.ver}</version>
        </dependency>
        <dependency>
            <groupId>org.benf</groupId>
            <artifactId>cfr</artifactId>
            <version>${depend.cfr.ver}</version>
        </dependency>
        <dependency>
            <groupId>net.minecraftforge</groupId>
            <artifactId>fernflower</artifactId>
            <version>${depend.fernflower.ver}</version>
        </dependency>
        <dependency>
            <groupId>io.github.lxgaming</groupId>
            <artifactId>classloaderutils</artifactId>
            <version>${depend.classloaderutils.ver}</version>
        </dependency>
        <dependency>
            <groupId>org.openjdk.jmh</groupId>
            <artifactId>jmh-core</artifactId>
            <version>${depend.jmh.ver}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.openjdk.jmh</groupId>
            <artifactId>jmh-generator-annprocess</artifactId>
            <version>${depend.jmh.ver}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <distributionManagement>
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/MaxPixelStudios/MinecraftDecompiler</url>
        </repository>
    </distributionManagement>
</project>